--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/style.css
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/style.css
@@ -12,24 +12,29 @@
   .header-container {
     background-color: #5C687C;
     display: flex;
-    order: 1;
-    align-items: self-start;
+    align-items: self-start;7
+    flex-basis: 500px;
   }
   
   .logo-container {
     display: flex;
     justify-content: center;
-    order: 2;
+    flex-basis: 268px;
   }
   
   .menu-container {
     display: flex;
+    order: 1;
+    flex-grow: 1;
+    align-self: center;
   }
   
   .menu-container ul {
+    
     display: flex;
     justify-content: space-around;
     width: 100%;
+   
   }
   
   .menu-container li {
