--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/style.css
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/style.css
@@ -53,6 +53,8 @@
   .movie-container {
     display: flex;
     flex-direction: column;
+    flex-basis: 700px;
+    flex-grow: 10;
   }
   
   .movie-container h2 {
@@ -74,6 +76,8 @@
     height: 150px;
     justify-content: center;
     margin: 10px;
+    flex-basis: 16%;
+    flex-grow: 1;
   }
   
   .aside-container {
