cria repositório da seção 06 de fundamentos, juntamente com o repositório do dia 01 da seção 6, e os arquivos do Aprofundando um pouco mais

--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-05-Responsividade/style.css
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-05-Responsividade/style.css
@@ -90,12 +90,14 @@ body {
 
 @media (min-width: 950px){
   .card:nth-of-type(3){
-    display: block;
+    display: block;scroll-snap-type:
   }
-  
+   
 }
 @media (max-width: 500px) {
   p.trick{
     color: black; 
 }
+
+
 }
